--- a/barbershop/css/style.css
+++ b/barbershop/css/style.css
@@ -261,6 +261,44 @@ img {
   background-color: var(--basic-white);
 }
 
+/* Product photos */
+.product-photo-preview {
+  list-style: none;
+}
+
+.product-photo-preview li {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-photo-preview li:hover {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+.product-photo-full {
+  display: block;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-article {
+  text-align: right;
+  color: var(--basic-dark);
+}
+
+.product-price b {
+  line-height: 20px;
+  text-align: center;
+  background-color: var(--basic-neutral);
+}
+
+/* Product info */
+.product-info h3 {
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.product-info ul {
+  list-style: none;
+}
 
 /* Main footer */
 .main-footer {
